# Backend

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  deploy.yaml  flake8  pyproject.toml  requirements.txt
.github/workflows/: code_check.yml  deploy.yaml  qa_deploy.yaml
infra/: .env.example  dir.info  docker-compose-dev.yaml  docker-compose-local.yaml  docker-compose-prod.yaml
infra/certbot/: Dockerfile  fullchain.pem  privkey.pem
infra/nginx/: Dockerfile  nginx.conf  nginx_dev.conf  nginx_loc.conf  nginx_qa.conf
nginx/: nginx.conf
src/backend/: db2home.sqlite3  manage.py  schema.yml
src/backend/api/v1/: apps.py  urls.py
src/backend/apps/general/: constants.py  models.py  serializers.py  urls.py  validators.py  views.py
src/backend/apps/profile/: constants.py  models.py  validators.py
src/backend/apps/project/: admin.py  apps.py  constants.py  models.py
src/backend/apps/projects/: admin.py  apps.py  constants.py  mixins.py  models.py  signals.py  tasks.py
src/backend/apps/users/: admin.py  apps.py  constants.py  forms.py  models.py  validators.py
src/backend/codepet/: asgi.py  settings.py  urls.py  wsgi.py
src/backend/config/: asgi.py  celery.py  urls.py  wsgi.py
src/backend/config/settings/: base.py  dev.py  local.py  prod.py
src/backend/data/fixtures/: dir.info  direction.json  section.json  skill.json  specialist.json  specialization.json  user.json
src/backend/data/logs/: dir.info
src/backend/general/: models.py
src/backend/project/: admin.py  constants.py  models.py
(+42 files in other folders)
